feat: add chat model api
